[package]
name = "decentralized_identity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ring = "0.16"  # For cryptographic operations
serde = { version = "1.0", features = ["derive"] }  # For serialization
serde_json = "1.0"  # For JSON handling
sled = "0.34"  # For embedded database
base64 = "0.21"  # For base64 encoding
